# android_modules

./: .gitignore  README.md
Photos-Pro/: module.prop  system.prop  update.json
Photos-Pro/src/: CMakeLists.txt  photos_pro.cpp
UnderCover/: module.prop  service.sh  system.prop  update.json
UnderCover/src/: CMakeLists.txt  undercover.cpp
